# exploration_project

./: .gitignore  LICENSE  README.md  test.world
comcast_launch/: CMakeLists.txt  README.md  package.xml
comcast_launch/launch/: my_ddk_nav.launch  octomap_mapping.launch
comcast_launch/param/: comcast_nav.rviz
comcast_launch/scripts/: demo_ddk.sh
ddk_nav_2d/: CMakeLists.txt  README.md  package.xml
ddk_nav_2d/cmake/: FindSuiteSparse.cmake
ddk_nav_2d/include/ddk_nav_2d/: ExplorationPlanner.h  GridMap.h  MapInflationTool.h  commands.h  ddkPlanner.h  frontier_planner.h  map_inflation_tool.h  nav2d.h
ddk_nav_2d/src/: MapInflationTool.cpp  ddkPlanner.cpp  example_interface.py  explore_client.cpp  explore_client_rospy.py  frontier_planner.cpp  get_map_client.cpp  grid_map_rospy.py  localize_client.cpp  map_inflation_tool.cpp  mapping.cpp  nav2d.cpp  nav2d_rospy.py  navigator.cpp  navigator_rospy.py  nearest_frontier_planner.py  set_goal_client.cpp
ddk_nav_msgs/: CMakeLists.txt  package.xml
ddk_nav_msgs/msg/: DdkWaypoint.msg
ddk_sim_launch/: CMakeLists.txt  README.md  package.xml
ddk_sim_launch/config/: tracker_params.yaml
ddk_sim_launch/launch/: controller.launch  ddk_example_interface.launch  ddk_navigator.launch  ddk_navigator_python.launch  ddk_rviz.launch  ddk_sim_tf_pub.launch  depth_pcl.launch  my_ddk_gazebo.launch  my_ddk_nav.launch  my_fetch_nav.launch  my_fetch_test.launch  octomap_mapping.launch  voxblox.launch
ddk_sim_launch/models/DB1_world1/: model.config  model.sdf
ddk_sim_launch/models/image1/: model.config  model.sdf
ddk_sim_launch/param/: comcast_nav.rviz  ddk_nav.rviz
ddk_sim_launch/scripts/: demo_ddk.sh  demo_ddk_python.sh
ddk_sim_launch/worlds/: DB1.world  DB1_45001.world  DB1_45003.world  DB1_45004.world  DB1_world1.world  ddk_smalloffice.world  image1.world  image49974.world  perch_office.world  smalloffice2.world  test_prefilter.world
launch/: ddk_demo.launch  ddk_sim_tf_pub.launch  my_ddk_gazebo.launch  my_ddk_nav.launch  my_fetch_nav.launch  my_fetch_test.launch  octomap_mapping.launch
param/: my_ddk_nav.yaml  my_fetch_nav.rviz  waypoint_demo.rviz
scripts/: cmd_plan_listener.py  waypoint_publisher.py
worlds/: smalloffice.world  smalloffice_texture.world
