<?xml version="1.0"?>
<package>

  <name>ddk_nav_2d</name>
  <version>0.0.0</version>
  <description>
  The 2d frontier based exploration for dragon ddk.
  </description>
  <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav2d_msgs</build_depend>
  <build_depend>nav2d_operator</build_depend>
  <build_depend>kr_mav_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>ewok_poly_spline</build_depend>
  <build_depend>ewok_optimization</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>ewok_ring_buffer</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>kr_replanning_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav2d_msgs</run_depend>
  <run_depend>nav2d_operator</run_depend>
  <run_depend>kr_mav_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>ewok_poly_spline</run_depend>
  <run_depend>ewok_optimization</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>ewok_ring_buffer</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>kr_replanning_msgs</run_depend>
</package>

