<?xml version="1.0"?>
<package format="2">
  <name>ddk_sim_launch</name>
  <version>0.0.0</version>
  <description>The ddk_sim_launch package</description>

  <maintainer email="yztao@seas.upenn.edu">Yuezhan Tao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>kr_mesh_visualization</exec_depend>
  <exec_depend>kr_quadrotor_simulator</exec_depend>
  <exec_depend>kr_mav_controllers</exec_depend>
  <exec_depend>kr_trackers</exec_depend>
  <exec_depend>kr_trackers_manager</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>nav2d_navigator</exec_depend>
  <exec_depend>nav2d_operator</exec_depend>

<export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
</export>

</package>
